--- a/index_current.html
+++ b/index_current.html
@@ -568,7 +568,7 @@
                     <h3>The Solution</h3>
                     <p><strong>One experienced operator who delivers both.</strong></p>
                     <ul>
-                        <li>18 years as CFO in PE-backed companies</li>
+                        <li>18 years of finance experience in PE-backed companies</li>
                         <li>Led acquisition and served as CFO for multiple portfolio companies</li>
                         <li>50+ Quality of Earnings projects ($3B+ total value)</li>
                         <li>Google Certified Generative AI Leader with proven implementations</li>
@@ -592,7 +592,7 @@
                 <tbody>
                     <tr>
                         <td>Hire separate CFO and AI/technology leader</td>
-                        <td>One operator with 18 years PE CFO experience + Google AI certification</td>
+                        <td>One operator with 18 years PE finance experience + Google AI certification</td>
                     </tr>
                     <tr>
                         <td>6-12 month hiring process for each role</td>
@@ -637,7 +637,7 @@
                     </tr>
                     <tr>
                         <td>Background in engineering/computer science</td>
-                        <td>18 years as PE portfolio company CFO and transaction advisor</td>
+                        <td>18 years as transaction advisor</td>
                     </tr>
                     <tr>
                         <td>Focused on technical capabilities</td>
@@ -711,7 +711,7 @@
                 <div class="roi-card">
                     <h4>Operational Efficiency</h4>
                     <p><strong>What You Get:</strong> AI-powered process improvements in high-impact areas</p>
-                    <p><strong>Specific Outcomes:</strong> 30-50% cost reduction in targeted processes, headcount leverage enabling growth without proportional hiring, margin expansion</p>
+                    <p><strong>Specific Outcomes:</strong> 30-40% cost reduction in targeted processes, headcount leverage enabling growth without proportional hiring, margin expansion</p>
                     <p><strong>Business Impact:</strong> Improved EBITDA and revenue-per-employee metrics that directly increase enterprise value</p>
                 </div>
                 
@@ -735,7 +735,7 @@
                 <ul>
                     <li>No long-term commitment required—prove value in first 90 days</li>
                     <li>Fractional model means strategic expertise exactly when needed</li>
-                    <li>44.5x track record proves I understand value creation, not just theory</li>
+                    <li>44.5x appreciation track record proves I understand value creation, not just theory</li>
                     <li>Google certified + hands-on AI implementation experience</li>
                     <li>I've sat on both sides: operating companies AND due diligence reviews</li>
                     <li>Every initiative evaluated through the lens of "Does this increase enterprise value?"</li>
@@ -790,7 +790,7 @@
                 <h4>18 Years of Financial Modeling & Strategic Finance</h4>
                 <p class="subtitle">Private Equity, Real Estate, and Corporate Finance</p>
                 <ul>
-                    <li>Built model for Adjacent Capital's $50 million distressed real estate fund</li>
+                    <li>Built model used to raise Adjacent Capital's $50 million distressed real estate fund</li>
                     <li>Created projections enabling Adaptive 3D's initial fundraising (company now publicly traded)</li>
                     <li>Developed complex acquisition models and offering memoranda for PE transactions</li>
                 </ul>
@@ -817,7 +817,7 @@
                     <div style="text-align: center; padding: 25px; background: white; border-radius: 8px; border-top: 3px solid #2a5298;">
                         <div style="font-size: 2.5em; color: #2a5298; margin-bottom: 10px;">💼</div>
                         <p style="font-weight: 600; margin-bottom: 8px; color: #1e3c72;">18 Years</p>
-                        <p style="font-size: 0.9em; color: #666;">PE & CFO Experience</p>
+                        <p style="font-size: 0.9em; color: #666;">PE finance Experience</p>
                     </div>
                 </div>
             </div>
@@ -905,7 +905,6 @@
                     <h4>Portfolio Companies</h4>
                     <ul>
                         <li>$25M-$200M revenue</li>
-                        <li>Years 3-7 of hold period</li>
                         <li>Need exit preparation and operational improvements</li>
                         <li>Open to AI/automation for competitive advantage</li>
                         <li>Want fractional expertise without full-time overhead</li>
@@ -916,7 +915,7 @@
                 <div class="client-card">
                     <h4>PE Firms</h4>
                     <ul>
-                        <li>Lower middle market focus</li>
+                        <li>Lower middle market and middle market focus</li>
                         <li>Multiple portfolio companies needing consistent financial leadership</li>
                         <li>Value innovation and operational improvement</li>
                         <li>Focused on maximizing exit multiples and IRR</li>
@@ -998,7 +997,7 @@
             <div style="background: white; padding: 25px; border-radius: 8px; margin-top: 30px;">
                 <h4 style="margin-top: 0;">AI Tools & Platforms</h4>
                 <p style="margin: 10px 0;"><strong>AI:</strong> ChatGPT (OpenAI), Claude (Anthropic), Relay.app, Fireflies.AI, Replit, Google NotebookLM</p>
-                <p style="margin: 10px 0;"><strong>Financial Systems:</strong> NetSuite, QuickBooks, Sage Intacct, Advanced Excel/Google Sheets financial modeling</p>
+                <p style="margin: 10px 0;"><strong>Financial Systems:</strong> NetSuite, QuickBooks, Xero, Advanced Excel financial modeling</p>
             </div>
         </section>
     </div>
@@ -1016,13 +1015,13 @@
                 <a href="https://calendly.com/thor-sentient-partners/30min" class="cta-button" target="_blank" style="margin: 10px;">Schedule Free Assessment</a>
                 <a href="mailto:thor@sentient-partners.com" class="cta-button secondary" style="margin: 10px;">Email: thor@sentient-partners.com</a>
             </div>
-            <p style="font-size: 0.95em; margin-top: 25px; opacity: 0.9;">No long-term commitment required. Prove value first.</p>
+            <p style="font-size: 0.95em; margin-top: 25px; opacity: 0.9;">No long-term commitment required.</p>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 John Oden, MBA | Fractional CFO & Chief AI Officer</p>
+            <p>&copy; 2025 John Oden | Fractional CFO & Chief AI Officer</p>
             <p style="margin-top: 10px;">
                 <a href="https://www.linkedin.com/in/joden/" target="_blank">Connect on LinkedIn</a> | 
                 <a href="mailto:thor@sentient-partners.com">thor@sentient-partners.com</a>
